--- a/UploadFiles/index.css
+++ b/UploadFiles/index.css
@@ -4,10 +4,11 @@ html {
     /* max-width: 1050px; */
 }
 
-body {
-    /* width: 850px; */
-    /* margin: 100 px; */
-}
+/* body {
+     width: 850px; 
+     margin: 100 px; 
+} 
+*/
 
 a {
     text-decoration: none;
@@ -46,6 +47,17 @@ a {
     /* align-items */
 }
 
+.alarmBtn {
+    display: grid;
+    grid-template-columns: 150px 150px;
+    justify-content: right;
+    column-gap: 30px;
+    padding-top: 20px;
+    background-color: #cfddda;
+    font-size: medium;
+}
+
+
 #HtmlLogView {
     display: grid;
     grid-template-columns: 450px 450px;
@@ -54,17 +66,44 @@ a {
     align-items: center;
 }
 
-#HtmlLogView #secSaveAlarmBtn,
-#secSaveEventBtn {
+.gridHeadng {
     display: grid;
-    justify-content: end
+    grid-template-columns: 450px 150px;
+    justify-content: end;
+    vertical-align: middle;
+    background-color: #f0fbf7;
+    grid-column: 1/span 2;
+    text-align: center;
+    font-weight: bold;
+
 }
 
-.gridHeadng {
-    grid-column: 1/span 2;
-    background-color: #f0fbf7;
-    text-align: center;
+.gridHeadng>section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 80px;
+    /* set a height for the section */
+    margin-right: 50px;
 }
+
+.alarmHeading {
+    display: grid;
+    padding-top: 20px;
+    grid-template-columns: 450px 450px;
+    justify-content: center;
+    vertical-align: middle;
+    background-color: #f9fcfb;
+    grid-column: 1/span 2;
+    text-align: center;
+    font-size: 30px;
+}
+
+#HtmlLogView>#secSaveAlarmBtn~#secSaveEventBtn {
+    display: grid;
+    justify-content: end;
+}
+
 
 #eventDiv,
 #alarmDiv {
@@ -75,6 +114,56 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+#viewBasic {
+    display: grid;
+    grid-template-columns: 900px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.data-list {
+  padding: 50px;
+  display: grid;
+  grid-gap: 20px;
+}
+
+.data-list div {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  align-items: center;
+  border: 1px solid #edd4d4;
+}
+
+.data-list dt {
+  font-weight: bold;
+  text-align: left;
+  border-right: 1px solid #edd4d4;
+  padding: 10px;
+}
+
+.data-list dd {
+  text-align: center;
+  margin-left: 0;
+  padding: 10px;
+}
+/* 
+.data-list div:first-child {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.data-list dt:first-child {
+  border-left: 2px solid black;
+}
+
+.data-list dt:last-child {
+  border-right: none;
+} */
+
+
+
+
 
 #heading {
     border: #4404aa;
@@ -165,9 +254,9 @@ a {
 }
 
 /* menustart*/
-.navbar_menu {
-    /* width: 300px; */
-}
+/* width: 300px; */
+/* .navbar_menu {
+} */
 
 .navbar {
     display: flex;
@@ -186,30 +275,34 @@ a {
 .navbar_menu li {
     padding: 8px 12px;
 }
-.firmware_ul >li > a {
+
+.firmware_ul>li>a {
     display: block;
 }
+
 .firmware_ul :hover {
-    display: block; 
+    display: block;
 }
+
 .firmware_ul li {
     text-align: center;
 }
+
 .firmware_ul {
     list-style: none;
     display: none;
     /* display: block; */
 }
 
-.firmware_ul >li>a:hover {
+.firmware_ul>li>a:hover {
     display: block;
-    background-color: #263343;
+    background-color: #d49466;
 }
 
-.navbar_menu li:hover > ul {
-    background-color: #d49466;
+.navbar_menu li:hover>ul {
+    /* background-color: #d49466; */
     border-radius: 4px;
-    display:block;
+    display: block;
 }
 
 .navbar_icons {
@@ -294,4 +387,13 @@ th {
     font-size: medium;
     font-weight: 700;
     color: rgb(9, 11, 83);
+}
+
+.messageBar {
+    display: none;
+}
+
+#testRoutine {
+    background-color: bisque;
+    display: none;
 }
